--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,8 @@ header {
     background-color: rgb(42, 37, 37);
     color:white;
     size: 20px;
+    position: relative;
+	width: 100%;
 }
 
 nav ul {
@@ -37,4 +39,26 @@ footer {
 img {
     width: 33%;
     height: 250px;
+}
+
+table {
+    width: 100%;
+    font-size: large;
+    border:solid 1px black;
+}
+
+table th, td {
+    border: solid 1px black;
+}
+
+table tr:nth-child(2) td:first-child {
+    color:yellow;
+}
+
+table tr:nth-child(3) td:first-child {
+    color:azure;
+}
+
+table tr:nth-child(4) td:first-child {
+    color: brown;
 }
